src/objects/Metric__c.object
<CustomObject>
    <description>This is the Contact Metrics custom object created for storing phone home data(risks, efficiencies, CPU Util etc).
06-27-2013 Created by VirtRock
www.virtrock.com</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Metrics</relationshipLabel>
        <relationshipName>Metrics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Efficiencies_Storage__c</fullName>
        <label>Efficiencies_Storage</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Efficiencies__c</fullName>
        <label>Efficiencies</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hosts__c</fullName>
        <label>Hosts</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxCPU__c</fullName>
        <label>MaxCPU</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxMem__c</fullName>
        <label>MaxMem</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risks_Storage__c</fullName>
        <label>Risks_Storage</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risks__c</fullName>
        <label>Risks</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage__c</fullName>
        <label>Storage</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Virtual_Machines__c</fullName>
        <label>Virtual Machines</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Metric</label>
    <nameField>
        <displayFormat>M-{0000000000}</displayFormat>
        <label>Metric Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>